--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -26,34 +26,48 @@
     "@testing-library/user-event": "^12.1.8",
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "@walletconnect/web3-provider": "^1.5.2",
+    "@walletconnect/web3-provider": "^1.7.8",
     "antd": "4.16.0",
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
     "apollo-utilities": "^1.3.4",
     "arb-ts": "^0.0.18",
+    "assert": "^2.0.0",
     "authereum": "^0.1.14",
     "axios": "^0.25.0",
     "bl": "^5.0.0",
     "bnc-notify": "^1.5.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^8.2.0",
     "eth-hooks": "2.3.16",
     "ethers": "^5.4.1",
     "fortmatic": "^2.2.1",
     "graphiql": "^1.4.7",
     "graphql": "^15.3.0",
+    "graphql-hooks": "^5.11.4",
+    "https-browserify": "^1.0.0",
     "ipfs-http-client": "^55.0.0",
     "isomorphic-fetch": "^3.0.0",
     "node-watch": "^0.7.1",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "qrcode.react": "^1.0.0",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-css-theme-switcher": "^0.2.2",
     "react-dom": "^17.0.2",
+    "react-hooks-use-modal": "^2.1.0",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "5.0.1",
     "searchico": "^1.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.1.6",
+    "url": "^0.11.0",
+    "use-react-modal": "^0.0.9",
+    "wagmi": "^0.5.9",
     "walletlink": "^2.1.5",
     "web3modal": "^1.9.1"
   },
@@ -61,7 +75,7 @@
     "@apollo/client": "^3.3.21",
     "@testing-library/dom": "^6.12.2",
     "@types/react": "^16.9.19",
-    "autoprefixer": "^9",
+    "autoprefixer": "10.4.7",
     "chalk": "^4.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -71,11 +85,12 @@
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^9.0.0",
     "less-plugin-npm-import": "^2.1.0",
-    "postcss": "^7",
+    "postcss": ">= 8.1",
     "prettier": "^2.0.5",
+    "react-app-rewired": "^2.2.1",
     "s3-folder-upload": "^2.3.1",
     "surge": "^0.21.5",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "^3.1.6"
   },
   "eslintConfig": {
     "extends": [
@@ -87,9 +102,9 @@
     }
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "prestart": "node ./scripts/create_contracts.js",
     "lint": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore ./src/**/*",
